workstyles:夜間と17日勤務作成

--- a/src/ejs/environment.ejs
+++ b/src/ejs/environment.ejs
@@ -14,8 +14,13 @@
     <%- include('./project/_p-environmentLinks') %>
   </div>
   <section class="l-workStyle">
-    <!-- =====12日勤務===== -->
-    <%- include('./project/_p-workStyle') %>
+    <%- include('./project/_p-workStyle_12days') %>
+  </section>
+  <section class="l-workStyle">
+    <%- include('./project/_p-workStyle_night') %>
+  </section>
+  <section class="l-workStyle">
+    <%- include('./project/_p-workStyle_17days') %>
   </section>
 
   <section class="l-environmentMmerit">
