WorkStyle：17勤務・夜勤テキスト変更

--- a/src/ejs/project/_p-workStyle_17days.ejs
+++ b/src/ejs/project/_p-workStyle_17days.ejs
@@ -2,15 +2,16 @@
   <div class="p-workStyle__inner">
     <div class="p-workStyle__section-header">
       <div class="p-fullTitle">
-        <h2 class="p-fullTitle__main">隔日勤務/12日勤務</h2>
-        <span class="p-fullTitle__sub">時間を優先したい人の働き方</span>
+        <h2 class="p-fullTitle__main">2勤1休制/17日勤務</h2>
+        <span class="p-fullTitle__sub">女性の方が活躍されている働き方</span>
       </div>
     </div>
     <div class="p-workStyle__units">
       <div class="p-workStyle__unit">
         <img src="images/environment/workStyle_time730.png" alt="7:30">
         <p class="p-workStyle__unitTitle">出社</p>
-        <p class="p-workStyle__unitText"> 6:00〜8:00の間で自由に出社時間を選べます。<br>
+        <p class="p-workStyle__unitText"> 6:00〜9:00の間に出社します。
+          ※お子様の都合など、家庭の事情がある方は、勤務日や勤務時間は気軽に相談してください。<br>
           ・点検などの準備 </p>
       </div>
       <div class="p-workStyle__unit">
@@ -35,7 +36,7 @@
       <div class="p-workStyle__unit">
         <img src="images/environment/workStyle_time1500.png" alt="15:00">
         <p class="p-workStyle__unitTitle">休憩</p>
-        <p class="p-workStyle__unitText"> 休憩は合計で3時間あります。自身で調整していただけます。</p>
+        <p class="p-workStyle__unitText"> 休憩は合計で2時間あります。自身で調整していただけます。</p>
       </div>
       <div class="p-workStyle__unit">
         <img src="images/environment/workStyle_time1600-2000.png" alt="16:00~20:00">
@@ -45,8 +46,7 @@
       <div class="p-workStyle__unit">
         <img src="images/environment/workStyle_time2530.png" alt="25:30">
         <p class="p-workStyle__unitTitle">退社</p>
-        <p class="p-workStyle__unitText"> 23:00~26:00の間で出勤時間に応じて
-          退社します。</p>
+        <p class="p-workStyle__unitText"> 218:00~20:00の間で出勤時間に応じて退社します。</p>
       </div>
     </div>
 
@@ -72,7 +72,7 @@
           <h3 class="p-yellowTitle p-yellowTitle--en">point</h3>
         </div>
         <div class="p-workStyle__pointsText">
-          休みは月に6日あります。月間で50万円以上稼ぐドライバーさんもおられるため、稼ぎたい人は頑張れば頑張るほど稼げる働き方です。休みたい曜日は自身で決めて頂きます。 決めて頂いた休みの翌日が2週間に1日休みになります。
+          月17日出勤です。連勤は3連勤まで取ることができ、ポジティブアクションで女性の働きやすさを追求しております。お子様の都合などで急な欠勤でも、他の日に振替で勤務してもらうことができます。中には男性より稼いでいる方もいらっしゃいます。社会保険も完備され、正社員雇用のため安心して働いていただけます。
         </div>
       </div>
     </div>
