--- a/src/ejs/project/_p-workStyle_night.ejs
+++ b/src/ejs/project/_p-workStyle_night.ejs
@@ -2,16 +2,17 @@
   <div class="p-workStyle__inner">
     <div class="p-workStyle__section-header">
       <div class="p-fullTitle">
-        <h2 class="p-fullTitle__main">隔日勤務/12日勤務</h2>
-        <span class="p-fullTitle__sub">時間を優先したい人の働き方</span>
+        <h2 class="p-fullTitle__main">夜間勤務</h2>
+        <span class="p-fullTitle__sub">稼ぎたい人の働き方</span>
       </div>
     </div>
     <div class="p-workStyle__units">
       <div class="p-workStyle__unit">
         <img src="images/environment/workStyle_time730.png" alt="7:30">
         <p class="p-workStyle__unitTitle">出社</p>
-        <p class="p-workStyle__unitText"> 6:00〜8:00の間で自由に出社時間を選べます。<br>
-          ・点検などの準備 </p>
+        <p class="p-workStyle__unitText"> 17:00~19:00の間で自由に出社時間を選べます。
+          ・点検などの準備<br>
+        </p>
       </div>
       <div class="p-workStyle__unit">
         <img src="images/environment/workStyle_time800.png" alt="8:00">
@@ -24,8 +25,8 @@
       </div>
       <div class="p-workStyle__unit">
         <img src="images/environment/workStyle_time800-1100.png" alt="8:00~11:00">
-        <p class="p-workStyle__unitTitle">午前のピークの時間</p>
-        <p class="p-workStyle__unitText"> 朝から昼前にかけては病院までお送りするお客様が多くいらっしゃる時間帯です。</p>
+        <p class="p-workStyle__unitTitle">夕方のピークの時間帯</p>
+        <p class="p-workStyle__unitText"> 夕方から夜にかけては、帰宅などご利用するお客様が多くいらっしゃる頑張る時間帯です。</p>
       </div>
       <div class="p-workStyle__unit">
         <img src="images/environment/workStyle_time1200.png" alt="12:00">
@@ -35,18 +36,17 @@
       <div class="p-workStyle__unit">
         <img src="images/environment/workStyle_time1500.png" alt="15:00">
         <p class="p-workStyle__unitTitle">休憩</p>
-        <p class="p-workStyle__unitText"> 休憩は合計で3時間あります。自身で調整していただけます。</p>
+        <p class="p-workStyle__unitText"> 休憩は合計で1時間あります。自身で調整していただけます。</p>
       </div>
       <div class="p-workStyle__unit">
         <img src="images/environment/workStyle_time1600-2000.png" alt="16:00~20:00">
-        <p class="p-workStyle__unitTitle">午後のピークの時間帯</p>
-        <p class="p-workStyle__unitText"> 夕方から夜にかけては、帰宅などご利用するお客様が多くいらっしゃる頑張る時間帯です。</p>
+        <p class="p-workStyle__unitTitle">夜のピークの時間帯</p>
+        <p class="p-workStyle__unitText"> 22:00以降は乗車賃が2割増しです。夜は大阪市内や奈良、京都までお送りするお客様も多く、道が空いているためガッツリ稼げます</p>
       </div>
       <div class="p-workStyle__unit">
         <img src="images/environment/workStyle_time2530.png" alt="25:30">
         <p class="p-workStyle__unitTitle">退社</p>
-        <p class="p-workStyle__unitText"> 23:00~26:00の間で出勤時間に応じて
-          退社します。</p>
+        <p class="p-workStyle__unitText"> 25:00~29:00(朝5:00)の間で出勤時間に応じて退社します。</p>
       </div>
     </div>
 
@@ -59,13 +59,6 @@
           <source media="(min-width: 768px)" srcset="images/environment/workStyle__calendar_01_pc.png" />
           <img src="images/environment/workStyle__calendar_01.png" alt="" loading="lazy">
         </picture>
-        <div class="p-calendar__description">
-          <figure class="p-calendar__description-icon">
-            <img src="images/environment/home-icon.svg" alt="">
-          </figure>
-          <span class="p-calendar__description-term">明け番</span>
-          <p class="p-calendar__description-text">1日に2日分働いた次の日の身体を休める日です。</p>
-        </div>
       </div>
       <div class="p-workStyle__points">
         <div class="p-workStyle__pointsTitle">
