workStyle:画像入れ替え

--- a/src/ejs/project/_p-workStyle_17days.ejs
+++ b/src/ejs/project/_p-workStyle_17days.ejs
@@ -44,9 +44,9 @@
         <p class="p-workStyle__unitText"> 夕方から夜にかけては、帰宅などご利用するお客様が多くいらっしゃる頑張る時間帯です。</p>
       </div>
       <div class="p-workStyle__unit">
-        <img src="images/environment/workStyle_time2530.png" alt="25:30">
+        <img src="images/environment/workStyle_time1930.png" alt="19:30">
         <p class="p-workStyle__unitTitle">退社</p>
-        <p class="p-workStyle__unitText"> 218:00~20:00の間で出勤時間に応じて退社します。</p>
+        <p class="p-workStyle__unitText"> 18:00~20:00の間で出勤時間に応じて退社します。</p>
       </div>
     </div>
 
@@ -56,8 +56,8 @@
       </div>
       <div class="p-calendar__contents">
         <picture class="p-calendar__calendarImg">
-          <source media="(min-width: 768px)" srcset="images/environment/workStyle__calendar_01_pc.png" />
-          <img src="images/environment/workStyle__calendar_01.png" alt="" loading="lazy">
+          <source media="(min-width: 768px)" srcset="images/environment/workStyle__calendar_03_pc.png" />
+          <img src="images/environment/workStyle__calendar_03.png" alt="17日勤務のカレンダー" loading="lazy">
         </picture>
         <div class="p-calendar__description">
           <figure class="p-calendar__description-icon">
