--- a/src/ejs/project/_p-workStyle_night.ejs
+++ b/src/ejs/project/_p-workStyle_night.ejs
@@ -8,14 +8,14 @@
     </div>
     <div class="p-workStyle__units">
       <div class="p-workStyle__unit">
-        <img src="images/environment/workStyle_time730.png" alt="7:30">
+        <img src="images/environment/workStyle_time1630.png" alt="16:30">
         <p class="p-workStyle__unitTitle">出社</p>
         <p class="p-workStyle__unitText"> 17:00~19:00の間で自由に出社時間を選べます。
           ・点検などの準備<br>
         </p>
       </div>
       <div class="p-workStyle__unit">
-        <img src="images/environment/workStyle_time800.png" alt="8:00">
+        <img src="images/environment/workStyle_time1700.png" alt="17:00">
         <p class="p-workStyle__unitTitle">乗務開始</p>
         <p class="p-workStyle__unitText">
           ・点検が完了次第、乗務開始です<br>
@@ -24,22 +24,17 @@
           のため、無線だけでも安定した売上を上げられます。 </p>
       </div>
       <div class="p-workStyle__unit">
-        <img src="images/environment/workStyle_time800-1100.png" alt="8:00~11:00">
+        <img src="images/environment/workStyle_time1700-2000.png" alt="17:00~20:00">
         <p class="p-workStyle__unitTitle">夕方のピークの時間帯</p>
         <p class="p-workStyle__unitText"> 夕方から夜にかけては、帰宅などご利用するお客様が多くいらっしゃる頑張る時間帯です。</p>
       </div>
       <div class="p-workStyle__unit">
-        <img src="images/environment/workStyle_time1200.png" alt="12:00">
-        <p class="p-workStyle__unitTitle">昼食</p>
-        <p class="p-workStyle__unitText"> 昼食の時間は決められておらず、自分の決めた好きなタイミングで昼食を取ります。 </p>
-      </div>
-      <div class="p-workStyle__unit">
-        <img src="images/environment/workStyle_time1500.png" alt="15:00">
+        <img src="images/environment/workStyle_time2100.png" alt="21:00">
         <p class="p-workStyle__unitTitle">休憩</p>
         <p class="p-workStyle__unitText"> 休憩は合計で1時間あります。自身で調整していただけます。</p>
       </div>
       <div class="p-workStyle__unit">
-        <img src="images/environment/workStyle_time1600-2000.png" alt="16:00~20:00">
+        <img src="images/environment/workStyle_time2400-2600.png" alt="24:00~26:00">
         <p class="p-workStyle__unitTitle">夜のピークの時間帯</p>
         <p class="p-workStyle__unitText"> 22:00以降は乗車賃が2割増しです。夜は大阪市内や奈良、京都までお送りするお客様も多く、道が空いているためガッツリ稼げます</p>
       </div>
@@ -56,8 +51,8 @@
       </div>
       <div class="p-calendar__contents">
         <picture class="p-calendar__calendarImg">
-          <source media="(min-width: 768px)" srcset="images/environment/workStyle__calendar_01_pc.png" />
-          <img src="images/environment/workStyle__calendar_01.png" alt="" loading="lazy">
+          <source media="(min-width: 768px)" srcset="images/environment/workStyle__calendar_02_pc.png" />
+          <img src="images/environment/workStyle__calendar_02.png" alt="夜間勤務のカレンダー" loading="lazy">
         </picture>
       </div>
       <div class="p-workStyle__points">
