links:ページ内スクロール追加

--- a/src/ejs/project/_p-environmentLinks.ejs
+++ b/src/ejs/project/_p-environmentLinks.ejs
@@ -10,21 +10,21 @@
           </a>
         </div>
         <div class="p-workStyleLinks__link">
-          <a href="#12days" class="p-workStyleLink">
+          <a href="#night" class="p-workStyleLink">
             <span class="p-workStyleLink__text">夜勤勤務</span>
             <span class="p-workStyleLink__subText">稼ぎたい人の働き方</span>
             <span class="p-workStyleLink__arrow"></span>
           </a>
         </div>
         <div class="p-workStyleLinks__link">
-          <a href="#12days" class="p-workStyleLink">
+          <a href="#17days" class="p-workStyleLink">
             <span class="p-workStyleLink__text">2勤1休制/17日勤務</span>
             <span class="p-workStyleLink__subText">女性の方が活躍されている働き方</span>
             <span class="p-workStyleLink__arrow"></span>
           </a>
         </div>
         <div class="p-workStyleLinks__link">
-          <a href="#12days" class="p-workStyleLink">
+          <a href="#merit" class="p-workStyleLink">
             <span class="p-workStyleLink__text">その他メリット</span>
             <span class="p-workStyleLink__subText">枚岡交通の社内環境</span>
             <span class="p-workStyleLink__arrow"></span>
