--- a/src/ejs/project/_p-environmentMerit.ejs
+++ b/src/ejs/project/_p-environmentMerit.ejs
@@ -1,4 +1,4 @@
-<div class="p-environmentMerit">
+<div class="p-environmentMerit" id="merit">
   <div class="p-environmentMerit__inner">
     <div class="p-environmentMerit__section-header">
       <div class="p-fullTitle">
