コード整理

--- a/src/ejs/project/_p-workStyle_12days.ejs
+++ b/src/ejs/project/_p-workStyle_12days.ejs
@@ -49,7 +49,6 @@
           退社します。</p>
       </div>
     </div>
-
     <div class="p-workStyle__calendar p-calendar">
       <div class="p-calendar__titleWrapper">
         <h3 class="p-yellowTitle">1ヶ月の勤務イメージ</h3>
@@ -57,7 +56,7 @@
       <div class="p-calendar__contents">
         <picture class="p-calendar__calendarImg">
           <source media="(min-width: 768px)" srcset="images/environment/workStyle__calendar_01_pc.png" />
-          <img src="images/environment/workStyle__calendar_01.png" alt="" loading="lazy">
+          <img src="images/environment/workStyle__calendar_01.png" alt="12日勤務のカレンダー" loading="lazy">
         </picture>
         <div class="p-calendar__description">
           <figure class="p-calendar__description-icon">
