--- a/src/sass/object/project/_p-workStyleLinks.scss
+++ b/src/sass/object/project/_p-workStyleLinks.scss
@@ -4,9 +4,11 @@
   display: flex;
   flex-wrap: wrap;
   margin-top: rem(-15);
+  // gap: rem(15);
 
   @include mq('md') {
   margin-top: 0;
+  // gap: rem(44.99999);
   }
 }
 
@@ -20,7 +22,6 @@
     max-width: 100%;
     margin-top: 0;
   }
-
 }
 
 .p-workStyleLinks__link:not(:nth-child(2n)) {
@@ -29,7 +30,6 @@
   @include mq('md') {
     margin-right: initial;
   }
-
 }
 .p-workStyleLinks__link:not(:nth-child(4n)) {
 
