--- a/src/sass/object/project/_p-workStyleLinks.scss
+++ b/src/sass/object/project/_p-workStyleLinks.scss
@@ -3,38 +3,21 @@
 .p-workStyleLinks {
   display: flex;
   flex-wrap: wrap;
-  margin-top: rem(-15);
-  // gap: rem(15);
+  // align-items: stretch;
+  gap: rem(15);
 
   @include mq('md') {
   margin-top: 0;
-  // gap: rem(44.99999);
+  gap: rem(45);
   }
 }
 
 .p-workStyleLinks__link {
   width: calc(50% - rem(15) * 1 / 2);
   max-width: 100%;
-  margin-top: rem(15);
 
   @include mq('md') {
     width: calc(25% - rem(45) * 3 /4);
     max-width: 100%;
-    margin-top: 0;
   }
 }
-
-.p-workStyleLinks__link:not(:nth-child(2n)) {
-  margin-right: rem(15);
-
-  @include mq('md') {
-    margin-right: initial;
-  }
-}
-.p-workStyleLinks__link:not(:nth-child(4n)) {
-
-  @include mq('md') {
-    margin-right: rem(45);
-    }
-}
-
