loading="lazy"追加

--- a/src/ejs/project/_p-workStyle_17days.ejs
+++ b/src/ejs/project/_p-workStyle_17days.ejs
@@ -8,14 +8,14 @@
     </div>
     <div class="p-workStyle__units">
       <div class="p-workStyle__unit">
-        <img src="images/environment/workStyle_time730.png" alt="7:30">
+        <img src="images/environment/workStyle_time730.png" alt="7:30" loading="lazy">
         <p class="p-workStyle__unitTitle">出社</p>
         <p class="p-workStyle__unitText"> 6:00〜9:00の間に出社します。
           ※お子様の都合など、家庭の事情がある方は、勤務日や勤務時間は気軽に相談してください。<br>
           ・点検などの準備 </p>
       </div>
       <div class="p-workStyle__unit">
-        <img src="images/environment/workStyle_time800.png" alt="8:00">
+        <img src="images/environment/workStyle_time800.png" alt="8:00" loading="lazy">
         <p class="p-workStyle__unitTitle">乗務開始</p>
         <p class="p-workStyle__unitText">
           ・点検が完了次第、乗務開始です<br>
@@ -24,27 +24,27 @@
           のため、無線だけでも安定した売上を上げられます。 </p>
       </div>
       <div class="p-workStyle__unit">
-        <img src="images/environment/workStyle_time800-1100.png" alt="8:00~11:00">
+        <img src="images/environment/workStyle_time800-1100.png" alt="8:00~11:00" loading="lazy">
         <p class="p-workStyle__unitTitle">午前のピークの時間</p>
         <p class="p-workStyle__unitText"> 朝から昼前にかけては病院までお送りするお客様が多くいらっしゃる時間帯です。</p>
       </div>
       <div class="p-workStyle__unit">
-        <img src="images/environment/workStyle_time1200.png" alt="12:00">
+        <img src="images/environment/workStyle_time1200.png" alt="12:00" loading="lazy">
         <p class="p-workStyle__unitTitle">昼食</p>
         <p class="p-workStyle__unitText"> 昼食の時間は決められておらず、自分の決めた好きなタイミングで昼食を取ります。 </p>
       </div>
       <div class="p-workStyle__unit">
-        <img src="images/environment/workStyle_time1500.png" alt="15:00">
+        <img src="images/environment/workStyle_time1500.png" alt="15:00" loading="lazy">
         <p class="p-workStyle__unitTitle">休憩</p>
         <p class="p-workStyle__unitText"> 休憩は合計で2時間あります。自身で調整していただけます。</p>
       </div>
       <div class="p-workStyle__unit">
-        <img src="images/environment/workStyle_time1600-2000.png" alt="16:00~20:00">
+        <img src="images/environment/workStyle_time1600-2000.png" alt="16:00~20:00" loading="lazy">
         <p class="p-workStyle__unitTitle">午後のピークの時間帯</p>
         <p class="p-workStyle__unitText"> 夕方から夜にかけては、帰宅などご利用するお客様が多くいらっしゃる頑張る時間帯です。</p>
       </div>
       <div class="p-workStyle__unit">
-        <img src="images/environment/workStyle_time1930.png" alt="19:30">
+        <img src="images/environment/workStyle_time1930.png" alt="19:30" loading="lazy">
         <p class="p-workStyle__unitTitle">退社</p>
         <p class="p-workStyle__unitText"> 18:00~20:00の間で出勤時間に応じて退社します。</p>
       </div>
@@ -61,7 +61,7 @@
         </picture>
         <div class="p-calendar__description">
           <figure class="p-calendar__description-icon">
-            <img src="images/environment/home-icon.svg" alt="">
+            <img src="images/environment/home-icon.svg" alt="" loading="lazy">
           </figure>
           <span class="p-calendar__description-term">明け番</span>
           <p class="p-calendar__description-text">1日に2日分働いた次の日の身体を休める日です。</p>
