sourceタグ:最後のスラッシュ削除

--- a/src/ejs/project/_p-workStyle_12days.ejs
+++ b/src/ejs/project/_p-workStyle_12days.ejs
@@ -55,7 +55,7 @@
       </div>
       <div class="p-calendar__contents">
         <picture class="p-calendar__calendarImg">
-          <source media="(min-width: 768px)" srcset="images/environment/workStyle__calendar_01_pc.png" />
+          <source media="(min-width: 768px)" srcset="images/environment/workStyle__calendar_01_pc.png">
           <img src="images/environment/workStyle__calendar_01.png" alt="12日勤務のカレンダー" loading="lazy">
         </picture>
         <div class="p-calendar__description">
