--- a/src/ejs/project/_p-workStyle_17days.ejs
+++ b/src/ejs/project/_p-workStyle_17days.ejs
@@ -56,7 +56,7 @@
       </div>
       <div class="p-calendar__contents">
         <picture class="p-calendar__calendarImg">
-          <source media="(min-width: 768px)" srcset="images/environment/workStyle__calendar_03_pc.png" />
+          <source media="(min-width: 768px)" srcset="images/environment/workStyle__calendar_03_pc.png">
           <img src="images/environment/workStyle__calendar_03.png" alt="17日勤務のカレンダー" loading="lazy">
         </picture>
         <div class="p-calendar__description">
