--- a/src/ejs/project/_p-workStyle_night.ejs
+++ b/src/ejs/project/_p-workStyle_night.ejs
@@ -51,7 +51,7 @@
       </div>
       <div class="p-calendar__contents">
         <picture class="p-calendar__calendarImg">
-          <source media="(min-width: 768px)" srcset="images/environment/workStyle__calendar_02_pc.png" />
+          <source media="(min-width: 768px)" srcset="images/environment/workStyle__calendar_02_pc.png">
           <img src="images/environment/workStyle__calendar_02.png" alt="夜間勤務のカレンダー" loading="lazy">
         </picture>
       </div>
