workstyleカレンダーまで微調整

--- a/src/sass/object/project/_p-calendar.scss
+++ b/src/sass/object/project/_p-calendar.scss
@@ -25,8 +25,8 @@
 
 .p-calendar__description {
   display: flex;
-  align-items: center;
-  margin-top: rem(15);
+  align-items: start;
+  margin-top: rem(20);
 
   @include mq('md') {
   margin-top: rem(20);
