--- a/src/sass/object/project/_p-workStyle.scss
+++ b/src/sass/object/project/_p-workStyle.scss
@@ -53,7 +53,15 @@
 }
 
 .p-workStyle__unit+.p-workStyle__unit {
-  margin-top: rem(36);
+  margin-top: rem(28);
+
+  @include mq('md') {
+    margin-top: rem(43);
+  }
+}
+
+.p-workStyle__unit:nth-of-type(3) {
+  margin-top: rem(-6);
 
   @include mq('md') {
     margin-top: rem(43);
@@ -126,8 +134,8 @@
   content: "";
   display: inline-block;
   flex-shrink: 0;
-  width: rem(30);
-  height: rem(4.5);
+  width: rem(15);
+  height: rem(2);
   margin-right: rem(7.35);
   background: url(../images/environment/workStyle_dotline.png) no-repeat center;
   background-size: cover;
@@ -140,8 +148,7 @@
 }
 
 .p-workStyle__unitText {
-  margin-top: rem(5);
-  padding: 0 0 0 rem(78 + 30 + 7.35);
+  padding: 0 0 0 rem(99.5);
   line-height: 1.5;
   font-size: rem(11);
 
@@ -156,7 +163,7 @@
 }
 
 .p-workStyle__calendar {
-  margin-top: rem(75);
+  margin-top: rem(73);
 
   @include mq('md') {
     margin-top: rem(100);
