--- a/src/ejs/project/_p-workStyle_12days.ejs
+++ b/src/ejs/project/_p-workStyle_12days.ejs
@@ -22,7 +22,7 @@
           <span>無線配車数が業界トップクラス</span>
           のため、無線だけでも安定した売上を上げられます。 </p>
       </div>
-      <div class="p-workStyle__unit">
+      <div class="p-workStyle__unit u-marginTop0">
         <img src="images/environment/workStyle_time800-1100.png" alt="8:00~11:00" loading="lazy">
         <p class="p-workStyle__unitTitle">午前のピークの時間</p>
         <p class="p-workStyle__unitText"> 朝から昼前にかけては病院までお送りするお客様が多くいらっしゃる時間帯です。</p>
@@ -71,7 +71,7 @@
           <h4 class="p-yellowTitle p-yellowTitle--en">point</h4>
         </div>
         <div class="p-workStyle__pointsText">
-          休みは月に6日あります。月間で50万円以上稼ぐドライバーさんもおられるため、稼ぎたい人は頑張れば頑張るほど稼げる働き方です。休みたい曜日は自身で決めて頂きます。 決めて頂いた休みの翌日が2週間に1日休みになります。
+          明け番と休みの組み合わせの連休が月に4回あります。連勤はなく、3連休に有給休暇を組み合わせれば、5連休にもできます！1日の勤務は大変でも、月に12日勤務でしっかり稼げてしっかり休めるため、プライベートの時間をしっかり確保でき、趣味を追求することもできます。
         </div>
       </div>
     </div>
