カレンダー微調整

--- a/src/ejs/project/_p-workStyle_night.ejs
+++ b/src/ejs/project/_p-workStyle_night.ejs
@@ -23,7 +23,7 @@
           <span>無線配車数が業界トップクラス</span>
           のため、無線だけでも安定した売上を上げられます。 </p>
       </div>
-      <div class="p-workStyle__unit">
+      <div class="p-workStyle__unit  u-marginTop0">
         <img src="images/environment/workStyle_time1700-2000.png" alt="17:00~20:00" loading="lazy">
         <p class="p-workStyle__unitTitle">夕方のピークの時間帯</p>
         <p class="p-workStyle__unitText"> 夕方から夜にかけては、帰宅などご利用するお客様が多くいらっしゃる頑張る時間帯です。</p>
