タイムスケジュール微調整

--- a/src/ejs/project/_p-workStyle_17days.ejs
+++ b/src/ejs/project/_p-workStyle_17days.ejs
@@ -14,7 +14,7 @@
           ※お子様の都合など、家庭の事情がある方は、勤務日や勤務時間は気軽に相談してください。<br>
           ・点検などの準備 </p>
       </div>
-      <div class="p-workStyle__unit">
+      <div class="p-workStyle__unit  u-marginTop0">
         <img src="images/environment/workStyle_time800.png" alt="8:00" loading="lazy">
         <p class="p-workStyle__unitTitle">乗務開始</p>
         <p class="p-workStyle__unitText">
@@ -23,7 +23,7 @@
           <span>無線配車数が業界トップクラス</span>
           のため、無線だけでも安定した売上を上げられます。 </p>
       </div>
-      <div class="p-workStyle__unit">
+      <div class="p-workStyle__unit   u-marginTop0">
         <img src="images/environment/workStyle_time800-1100.png" alt="8:00~11:00" loading="lazy">
         <p class="p-workStyle__unitTitle">午前のピークの時間</p>
         <p class="p-workStyle__unitText"> 朝から昼前にかけては病院までお送りするお客様が多くいらっしゃる時間帯です。</p>
