--- a/src/ejs/project/_p-environmentMerit.ejs
+++ b/src/ejs/project/_p-environmentMerit.ejs
@@ -51,7 +51,7 @@
             <h4 class="p-yellowLineCard__title">
               二種免許取得費用<br>
               支援制度あり</h4>
-            <p class="p-yellowLineCard__text">会社内の人間関係で程よい距離感で接することができます。部署間の壁がなく、親しみやすいアットホームな雰囲気の会社です。</p>
+            <p class="p-yellowLineCard__text">タクシー専用の資格である二種免許を取得する費用は会社から支援があるので、一生使える資格が手に入ります。</p>
           </div>
         </li>
         <li class="p-yellowLinecards__card">
