--- a/src/sass/object/project/_p-workStyleLink.scss
+++ b/src/sass/object/project/_p-workStyleLink.scss
@@ -82,10 +82,10 @@
   text-align: center;
   transform: rotate(135deg);
   margin-top: rem(19.5);
-  // margin-top: auto;
 
   @include mq('md') {
-    margin-top: rem(58);
-    // margin-top: auto;
+    width: rem(25);
+    height: rem(25);
+    margin-top: rem(37);
   }
 }
