カレンダー：微調整

--- a/src/ejs/project/_p-workStyle_12days.ejs
+++ b/src/ejs/project/_p-workStyle_12days.ejs
@@ -64,7 +64,7 @@
               <img src="images/environment/home-icon.svg" alt="" loading="lazy">
             </figure>
             <span class="p-calendar__description-term">明け番</span>
-            <p class="p-calendar__description-text">1日に2日分働いた次の日の身体を休める日です。</p>
+            <p class="p-calendar__description-text">長い時間勤務した次の日はお休みになります。</p>
           </div>
         </div>
         <div class="p-workStyle__points">
