17勤カレンダー修正

--- a/src/ejs/project/_p-workStyle_night.ejs
+++ b/src/ejs/project/_p-workStyle_night.ejs
@@ -6,12 +6,13 @@
         <span class="p-fullTitle__sub">稼ぎたい人の働き方</span>
       </div>
     </div>
+    <div class="p-workStyle__contents">
     <div class="p-workStyle__units">
       <div class="p-workStyle__unit">
         <img src="images/environment/workStyle_time1630.png" alt="16:30" loading="lazy">
         <p class="p-workStyle__unitTitle">出社</p>
-        <p class="p-workStyle__unitText"> 17:00~19:00の間で自由に出社時間を選べます。
-          ・点検などの準備<br>
+        <p class="p-workStyle__unitText"> 17:00~19:00の間で自由に出社時間を選べます。<br>
+          ・点検などの準備
         </p>
       </div>
       <div class="p-workStyle__unit">
@@ -44,7 +45,6 @@
         <p class="p-workStyle__unitText"> 25:00~29:00(朝5:00)の間で出勤時間に応じて退社します。</p>
       </div>
     </div>
-
     <div class="p-workStyle__calendar p-calendar">
       <div class="p-calendar__titleWrapper">
         <h4 class="p-yellowTitle">1ヶ月の勤務イメージ</h4>
@@ -64,5 +64,6 @@
         </div>
       </div>
     </div>
+  </div>
   </div>
 </div>
