--- a/src/sass/object/project/_p-yellowLineCard.scss
+++ b/src/sass/object/project/_p-yellowLineCard.scss
@@ -11,6 +11,7 @@
 
   @include mq('md') {
     font-size: rem(30);
+    gap: rem(37);
   }
 }
 
@@ -20,6 +21,10 @@
   width: rem(250);
   height: rem(4);
   background-color: $yellow;
+
+  @include mq('md') {
+    width: rem(310);
+  }
 }
 
 .p-yellowLineCard__text {
@@ -28,7 +33,7 @@
   line-height: 1.86666;
 
   @include mq('md') {
-    padding-top: rem(35);
+    padding-top: rem(26);
     font-size: rem(20);
     line-height: 2;
   }
