--- a/src/sass/object/project/_p-yellowLineCards.scss
+++ b/src/sass/object/project/_p-yellowLineCards.scss
@@ -1,8 +1,12 @@
 @use "global"as *;
 
 .p-yellowLineCards {
-  display: flex;
-  flex-wrap: wrap;
+
+  @include mq('md') {
+    display: flex;
+    flex-wrap: wrap;
+    gap: rem(122) rem(80);
+  }
 }
 
 .p-yellowLinecards__card {
@@ -18,20 +22,20 @@
   margin-top: rem(50);
 
   @include mq('md') {
-    margin-top: rem(100);
+    margin-top: 0;
   }
 }
 
-.p-yellowLinecards__card {
-  @include mq('md') {
-    margin-top: rem(100);
-  }
-}
+// .p-yellowLinecards__card {
+//   @include mq('md') {
+//     margin-top: rem(100);
+//   }
+// }
 
-.p-yellowLinecards__card:not(:nth-child(4n)) {
+// .p-yellowLinecards__card:not(:nth-child(4n)) {
 
-  @include mq('md') {
-    margin-right: rem(80);
-  }
+//   @include mq('md') {
+//     margin-right: rem(80);
+//   }
 
-}
+// }
