--- a/src/sass/object/project/_p-calendar.scss
+++ b/src/sass/object/project/_p-calendar.scss
@@ -25,7 +25,7 @@
 
 .p-calendar__description {
   display: flex;
-  align-items: start;
+  align-items: center;
   margin-top: rem(15);
 
   @include mq('md') {
@@ -35,22 +35,22 @@
 
 .p-calendar__description-icon {
   display: block;
-  max-width: rem(31);
+  // max-width: rem(31);
   padding: rem(10) rem(10);
   border-radius: 50%;
   background-color: #02B5FD;
   margin-right: rem(2);
 
   @include mq('md') {
-    max-width: rem(30);
+    // max-width: rem(30);
     padding: rem(7) rem(7);
   }
 }
 
 
 .p-calendar__description-icon img {
-  width: rem(12.5);
-  height: rem(12.5);
+  width: rem(18);
+  height: rem(18);
   fill: #fff;
 
   @include mq('md') {
@@ -77,11 +77,12 @@
 }
 
 .p-calendar__description-text {
+  padding-top: rem(15);
   font-size: rem(12);
   line-height: 1.5;
 
   @include mq('md') {
-    max-width: initial;
+    padding-top: rem(0);
     font-size: rem(14);
     line-height: 2.5714;
   }
