--- a/src/sass/object/project/_p-environmentMerit.scss
+++ b/src/sass/object/project/_p-environmentMerit.scss
@@ -1,7 +1,7 @@
 @use "global"as *;
 
 .p-environmentMerit__inner {
-  overflow-x: hidden;
+  // overflow-x: hidden;
   width: 100%;
   max-width: rem(540); //状況によって変える必要があるかも
   height: inherit;
