--- a/src/sass/object/project/_p-workStyleLink.scss
+++ b/src/sass/object/project/_p-workStyleLink.scss
@@ -11,7 +11,7 @@
   background-color: $yellow;
 
   @include mq('md') {
-    padding: rem(104) rem(30) rem(47);
+    padding: rem(104) rem(10) rem(47);
   }
 }
 
@@ -38,6 +38,7 @@
   justify-content: center;
   align-items: center;
   gap: rem(8.5);
+  text-align: center;
   font-size: rem(16);
   font-weight: bold;
   line-height: 1;
@@ -56,6 +57,7 @@
   background-color: $black;
 
   @include mq('md') {
+    width: calc(100% - #{rem(46)});
     height: rem(3.38);
   }
 }
