--- a/src/sass/object/project/_p-workStyleLinks.scss
+++ b/src/sass/object/project/_p-workStyleLinks.scss
@@ -8,7 +8,8 @@
 
   @include mq('md') {
   margin-top: 0;
-  gap: rem(45);
+  // gap: rem(45);
+  gap: rem(44);
   }
 }
 
@@ -17,7 +18,8 @@
   max-width: 100%;
 
   @include mq('md') {
-    width: calc(25% - rem(45) * 3 /4);
+    // width: calc(25% - rem(45) * 3 / 4);
+    width: calc(25% - rem(44) * 3 / 4);
     max-width: 100%;
   }
 }
