夜勤カレンダー：画像差し替え

--- a/src/sass/object/project/_p-yellowLineCard.scss
+++ b/src/sass/object/project/_p-yellowLineCard.scss
@@ -1,11 +1,18 @@
 @use "global"as *;
 
+// .p-yellowLineCard {
+//   display: flex;
+//   flex-direction: column;
+// }
+
 .p-yellowLineCard__title {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  // align-self: stretch;
   gap: rem(21);
+  text-align: center;
   font-size: rem(24);
   line-height: 1.25;
 
