夜勤カレンダー：画像差し替え

--- a/src/sass/object/project/_p-calendar.scss
+++ b/src/sass/object/project/_p-calendar.scss
@@ -23,6 +23,11 @@
   }
 }
 
+.p-calendar__calendarImg img {
+  width: 100%;
+  height: 100%;
+}
+
 .p-calendar__description {
   display: flex;
   align-items: center;
